# mys-mydata

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Design.md  Dockerfile  Dockerfile.mydata-proxy  LICENSE  README.md  TermsOfService.md  UsingSeal.md  deny.toml  key-server-config-railway.yaml  mimir-railway.yaml  mkdocs.yml  mydata-proxy-config-railway.yaml  railway-mimir.json  railway-mimir.toml  railway-mydata-key-server-1.json  railway-mydata-key-server-1.toml  railway-mydata-key-server-2.json  railway-mydata-key-server-2.toml  railway-mydata-key-server-3.json  railway-mydata-key-server-3.toml  railway-mydata-proxy.json  railway-mydata-proxy.toml  railway.toml  ws-resources.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: code-bug.md  doc-bug.md
.github/workflows/: move.yml  rust.yml  typescript.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: dem.rs  elgamal.rs  gf256.rs  ibe.rs  lib.rs  polynomial.rs  prefixed_hex.rs  tss.rs  utils.rs
crates/key-server/: Cargo.toml  README.md  key-server-config.yaml
crates/key-server/src/: cache.rs  errors.rs  externals.rs  key_server_options.rs  master_keys.rs  metrics.rs  metrics_push.rs  mvr.rs  mys_rpc_client.rs  periodic_updater.rs  server.rs  signed_message.rs  time.rs  types.rs  utils.rs  valid_ptb.rs
crates/key-server/src/tests/: e2e.rs  externals.rs  mod.rs  pd.rs  server.rs  tle.rs  whitelist.rs
crates/key-server/src/tests/whitelist_v1/: Move.toml
crates/key-server/src/tests/whitelist_v1/sources/: whitelist_v1.move
crates/key-server/src/tests/whitelist_v2/: Move.toml
crates/key-server/src/tests/whitelist_v2/sources/: whitelist_v2.move
crates/mydata-cli/: Cargo.toml
crates/mydata-cli/src/: main.rs
crates/mydata-proxy/: Cargo.toml  README.md
crates/mydata-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs  providers.rs  remote_write.rs
crates/mydata-sdk/: Cargo.toml
crates/mydata-sdk/src/: lib.rs  types.rs
crates/seal-cli/: Cargo.toml
crates/seal-cli/src/: main.rs
crates/seal-proxy/src/: config.rs  consumer.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs  providers.rs
crates/seal-sdk/: Cargo.toml
crates/seal-sdk/src/: lib.rs  types.rs
docker/seal-proxy/: Dockerfile
docs/: Design.md  ExamplePatterns.md  GettingStarted.md  KeyServerOps.md  MyDataCLI.md  Pricing.md  SecurityBestPractices.md  TermsOfService.md  UsingMyData.md  UsingSeal.md  index.md
examples/: README.md
examples/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/frontend/src/: Allowlist.tsx  AllowlistView.tsx  App.tsx  CreateAllowlist.tsx  CreateSubscriptionService.tsx  EncryptAndUpload.tsx  OwnedAllowlists.tsx  OwnedSubscriptionServices.tsx  SubscriptionService.tsx  SubscriptionView.tsx  constants.ts  main.tsx  networkConfig.ts  utils.ts
examples/move/: Move.toml
examples/move/sources/: allowlist.move  subscription.move
move/patterns/: Move.toml
move/patterns/sources/: account_based.move  key_request.move  private_data.move  subscription.move  tle.move  voting.move  whitelist.move
move/seal/: Move.toml  README.md
move/seal/sources/: bf_hmac_encryption.move  gf256.move  hmac256ctr.move  (+3 more)
tests/: README.md  package.json  pnpm-lock.yaml  simple-seal-server.test.ts
(+5 files in other folders)
