[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0"
itertools = { version = "0.13.0" }
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.17", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.11.0"

# MySo dependencies
mys_types = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "mys-types", branch = "custom-profile-contract-add"}
mysten-service = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "mysten-service", branch = "custom-profile-contract-add" }
mys_sdk = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "mys-sdk", branch = "custom-profile-contract-add"}
shared_crypto = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "shared-crypto", branch = "custom-profile-contract-add" }
test_cluster = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "test-cluster", branch = "custom-profile-contract-add" }
mys_move_build = { git = "https://github.com/The-Social-Proof-Foundation/mys-core", package = "mys-move-build", branch = "custom-profile-contract-add" }

[profile.release]
panic = 'abort'
