[package]
name = "seal-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_yaml = "0.9"
serde_json = { workspace = true }
bcs.workspace = true
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mys_sdk = { workspace = true }
mys-sdk-types = { workspace = true }
mys_types = { workspace = true }

crypto = { path = "../crypto" }
seal-sdk = { path = "../seal-sdk" }
